    /etc/kernel-img.conf (Closes: #730073).
  * linux-image: postrm: Update default symlinks before running hook scripts
  * linux-image: Make a newly installed kernel the default if the package
    was previously removed
  * mtd: Disable slram and phram when securelevel is enabled
  * debian/patches/features/all/rt/genpatch.py: Use Python 3

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100

linux (4.6-1~exp2) experimental; urgency=medium

  [ Ben Hutchings ]
  * [tilegx] Build a linux-libc-dev package (Closes: #824524; thanks to
    Helmut Grohne)
  * [tilegx] linux-libc-dev: Install <arch/*> headers in arch-specific
    directory (Closes: #823632; thanks to Helmut Grohne)
  * [rt] Update to 4.6-rc7-rt1 and re-enable
    - Override SYSTEM_TRUSTED_KEYS to work from the source_rt directory
  * Fold debian/config/README into debian/README.source
  * debian/README.source: Rewrite and expand explanation of kernel config file
    construction
  * aufs: Update support patches to aufs4.6-20160523
    - mmap: Fix use-after-free in remap_file_pages(2)
  * [mips*] Change NFS and various storage and network drivers from built-in
    to modules
  * 8139too: Use same configuration on all architectures: enable
    8139TOO_TUNE_TWISTER, 8139TOO_8129 and disable 8139TOO_PIO
  * [mipsn32{,r6}{,el}] Build linux-libc-dev and tools packages
  * [mips{,64}r6{,el}] Add kernel flavours for the Malta platform; build
    linux-libc-dev and tools packages (Closes: #825024; thanks to YunQiang Su)
  * [mips*/*-malta] udeb: Add ata-modules package
  * linux-image: Stop setting $STEM in environment for maintainer script hooks
  * linux-image: Add workaround for bug #817083 in debconf
  * linux-image: prerm: Allow removal of running kernel if we can't ask debconf
    questions (Closes: #825423)
  * linux-image: prerm: Ignore version of running kernel inside a container or
    chroot
  * [s390] udeb: Drop all packages, since s390 no longer has its own kernel
