@@ -15,6 +15,8 @@ linux (4.6.1-1~exp1) UNRELEASED; urgency=medium
     was previously removed
   * mtd: Disable slram and phram when securelevel is enabled
   * debian/patches/features/all/rt/genpatch.py: Use Python 3
+  * debian/patches/features/all/rt/genpatch.py: Fix mapping of -rt version to
+    upstream version
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 04 Jun 2016 18:33:11 +0100
 
